welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: not found: type Colour
def faireFleur(c:Colour){
                 ^